[project]
name = "lis-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marc Toussaint", email = "toussaint@tu-berlin.de" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
lis-data = "lis_data:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
