[project]
name = "data-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marc Toussaint", email = "toussaint@tu-berlin.de" }
]
requires-python = ">=3.10"
dependencies = [
    "pillow", "numpy", "h5py", "pyyaml", "lxml",
]

[project.scripts]
data-tools = "data_tools:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
